# haplomatic

./: pyproject.toml
haplomatic/: adaptive.py  pop_simulator.py  read_simulator.py  sim.py  trainer.py  validate.py  windows.py
haplomatic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pop_simulator.py  test_read_simulator.py  test_trainer.py  test_windows.py  test_windows_utils.py
